create endpoint for clearing DB
